trying to make the change Password functionality work

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Set here configurations for the database connection
-#spring.datasource.url=jdbc:postgresql://10.90.24.54/matchup
-spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
+spring.datasource.url=jdbc:postgresql://10.90.24.54/matchup
+#spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
 #spring.datasource.url=jdbc:postgresql://localhost:5432/matchup?reWriteBatchedInserts=true
 spring.datasource.username=aula
 spring.datasource.password=aula
@@ -22,6 +22,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.security.user.name=user
 spring.security.user.password=123
+
+spring.config.use-legacy-processing=true
+spring.config.name=.env
+
 
 spring.security.user.passwordEncoder=bcrypt
 
