--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Set here configurations for the database connection
 #spring.datasource.url=jdbc:postgresql://10.90.24.54/matchup
-spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
-#spring.datasource.url=jdbc:postgresql://localhost:5432/matchup?reWriteBatchedInserts=true
-spring.datasource.username=aula
-spring.datasource.password=aula
-#spring.datasource.username=postgres
-#spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
+spring.datasource.url=jdbc:postgresql://localhost:5432/matchup?reWriteBatchedInserts=true
+#spring.datasource.username=aula
+#spring.datasource.password=aula
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Set the default schema
@@ -13,6 +13,7 @@ spring.jpa.properties.hibernate.default_schema=matchup
 
 # Show or not log for each sql query
 spring.jpa.show-sql=true
+
 
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
