--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-text-mask": "^5.5.0",
