--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Set here configurations for the database connection
-#spring.datasource.url=jdbc:postgresql://10.90.24.54/matchup
-spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
+spring.datasource.url=jdbc:postgresql://10.90.24.54/matchup
+#spring.datasource.url=jdbc:postgresql://200.18.128.54/matchup
 #spring.datasource.url=jdbc:postgresql://localhost:5432/matchup?reWriteBatchedInserts=true
 spring.datasource.username=aula
 spring.datasource.password=aula
@@ -17,7 +17,7 @@ spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.security.user.name=user
