--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.12.1",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -31,6 +32,7 @@
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "ws": "^8.14.2",
     "yup": "^1.2.0"
   },
   "scripts": {
