trying to make the tsx components work with the routes and failing miserably

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,8 @@
     "axios": "^1.2.6",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
-    "formik": "^2.4.3",
     "emoji-mart": "^5.2.2",
+    "formik": "^2.4.3",
     "framer-motion": "^7.5.3",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
@@ -50,8 +50,8 @@
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.3",
     "socket.io-client": "^4.6.0",
-    "typescript": "^4.9.5",
     "stylis-plugin-rtl": "^2.0.2",
+    "typescript": "^4.9.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "ws": "^8.14.2",
@@ -83,6 +83,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@faker-js/faker": "^7.5.0"
   }
 }
