--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "socket.io-client": "^4.6.0",
     "stylis-plugin-rtl": "^2.0.2",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "ws": "^8.14.2",
