removing code related to old messages fetching

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/matchup?
 #spring.datasource.username=aula
 #spring.datasource.password=aula
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Set the default schema
